// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip (unit tests) when has a position should match the snapshot 1`] = `
<kv-tooltip custom-class="" delay="1000" position="left" text="Tooltip">
  <mock:shadow-root>
    <div id="content" part="content">
      <slot></slot>
    </div>
  </mock:shadow-root>
</kv-tooltip>
`;

exports[`Tooltip (unit tests) when uses default props should match the snapshot 1`] = `
<kv-tooltip custom-class="" delay="1000" text="Tooltip">
  <mock:shadow-root>
    <div id="content" part="content">
      <slot></slot>
    </div>
  </mock:shadow-root>
</kv-tooltip>
`;
